tests/Rules/Structure/Fixtures/valid/table_caption_and_summary_different.html.twig
<table summary="User list">
  <caption>List of users</caption>
  <tr><td>ok</td></tr>
</table>
