tests/Rules/Structure/Fixtures/invalid/table_duplicate_name.html.twig
{# 1 error #}
<table summary="Users">
  <caption>Users</caption>
  <tr><td>ok</td></tr>
</table>
